--- a/cms/courses/templates/courses/course/detail.html
+++ b/cms/courses/templates/courses/course/detail.html
@@ -15,6 +15,15 @@
                 Instructor: {{ object.owner.get_full_name }}
             </p>
             {{ object.overview|linebreaks }}
+            {% if request.user.is_authenticated %}
+                <form method="post" action="{% url 'student_enroll_course' %}">
+                    {{ enroll_form }}
+                    {% csrf_token %}
+                    <p><input type="submit" value="Enroll now"></p>
+                </form>
+            {% else %}
+                <a href="{% url 'student_registration' %}" class="button">Register to enroll</a>
+            {% endif %}
         </div>
     {% endwith %}
 {% endblock %}
