Add content rendering templates.

--- a/cms/students/templates/students/course/detail.html
+++ b/cms/students/templates/students/course/detail.html
@@ -23,7 +23,7 @@
         </ul>
     </div>
     <div class="module">
-        {% for content in module.content.all %}
+        {% for content in module.contents.all %}
             {% with item=content.item %}
                 <h2>{{ item.title }}</h2>
                 <!-- render given content item -->
