--- a/cms/students/templates/students/course/detail.html
+++ b/cms/students/templates/students/course/detail.html
@@ -1,4 +1,5 @@
 {% extends "common/base.html" %}
+{% load cache %}
 
 {% block title %}{{ object.title }}{% endblock %}
 
@@ -23,13 +24,15 @@
         </ul>
     </div>
     <div class="module">
-        {% for content in module.contents.all %}
-            {% with item=content.item %}
-                <h2>{{ item.title }}</h2>
-                <!-- render given content item -->
-                {{ item.render }}
-            {% endwith %}
-        {% endfor %}
+        {% cache 600 module_contents module %}
+            {% for content in module.contents.all %}
+                {% with item=content.item %}
+                    <h2>{{ item.title }}</h2>
+                    <!-- render given content item -->
+                    {{ item.render }}
+                {% endwith %}
+            {% endfor %}
+        {% endcache %}
     </div>
 {% endblock %}
 
